# wifi

./: README.md  pyproject.toml  smartcom.py
wifi/: aircrack.py  smartcom.py
